--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Rock Paper Scissors Lizard Spock</h1>
         <p id="Scoreboard"></p>
         <p id="Results"></p>
-        <form action="javascript:Roll()">
+        <form action="javascript:RPSLS()">
             <select id="User">
                 <option value="0" selected>Rock</option>
                 <option value="1">Paper</option>
