--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
         <h1>Rock Paper Scissors Lizard Spock</h1>
         <p id="Scoreboard"></p>
         <p id="Results"></p>
-        <form action="javascript:RPSLS()">
-            <select id="User">
-                <option value="0" selected>Rock</option>
-                <option value="1">Paper</option>
-                <option value="2">Scissors</option>
-                <option value="3">Lizard</option>
-                <option value="4">Spock</option>
-            </select>
-            <input type="submit" value="Submit" />
-        </form>
+        <p>
+            Choose your hero:
+            <form action="javascript:RPSLS()">
+                <select id="User">
+                    <option value="0" selected>Rock</option>
+                    <option value="1">Paper</option>
+                    <option value="2">Scissors</option>
+                    <option value="3">Lizard</option>
+                    <option value="4">Spock</option>
+                </select>
+                <input type="submit" value="Submit" />
+            </form>
+        </p>
         <script src="rps.js"></script> 
     </body>
 </html>
