Add game rules to HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     </head>
     <body>
         <h1>Rock Paper Scissors Lizard Spock</h1>
+        <h3>Rules:</h3>
+        <div class="Rules">
+            <ul>
+                <li>Rock smashes Scissors</li>
+                <li>Scissors decapitates Lizard</li>
+                <li>Lizard poisons Spock</li>
+                <li>Spock vaporizes Rock</li>
+                <li>Rock crushes Lizard</li>
+                <li>Lizard eats Paper</li>
+                <li>Paper disproves Spock</li>
+                <li>Spock breaks Scissors</li>
+                <li>Scissors cuts Paper</li>
+                <li>Paper covers Rock</li>
+            </ul>
+        </div>
         <p id="Scoreboard"></p>
         <p id="Results"></p>
         <p>
