Promote results & score to h2 and h3, respectively

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <li>Paper covers Rock</li>
             </ul>
         </div>
-        <p id="Scoreboard"></p>
-        <p id="Results"></p>
+        <h3 id="Scoreboard"></h3>
+        <h2 id="Results"></h2>
         <p>Choose your hero:</p>
         <div class="Heroes">
             <button accesskey="r"><u>R</u>ock</button>
