--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Rock Paper Scissors Lizard Spock</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <h1>Rock Paper Scissors Lizard Spock</h1>
-        <h3>Rules:</h3>
-        <div class="Rules">
-            <ul>
-                <li>Rock smashes Scissors</li>
-                <li>Scissors decapitates Lizard</li>
-                <li>Lizard poisons Spock</li>
-                <li>Spock vaporizes Rock</li>
-                <li>Rock crushes Lizard</li>
-                <li>Lizard eats Paper</li>
-                <li>Paper disproves Spock</li>
-                <li>Spock breaks Scissors</li>
-                <li>Scissors cuts Paper</li>
-                <li>Paper covers Rock</li>
-            </ul>
-        </div>
-        <h3 id="Scoreboard"></h3>
-        <h2 id="Results"></h2>
-        <p>Choose your hero:</p>
-        <div class="Heroes">
-            <button accesskey="r"><u>R</u>ock</button>
-            <button accesskey="p"><u>P</u>aper</button>
-            <button accesskey="c">S<u>c</u>issors</button>
-        </div>
-        <div class="Heroes">
-            <button accesskey="l"><u>L</u>izard</button>
-            <button accesskey="s"><u>S</u>pock</button>
-        </div>
-        <script src="rps.js"></script> 
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=0" />
+    <title>Rock Paper Scissors Lizard Spock</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Rock Paper Scissors Lizard Spock</h1>
+    <h3>Rules:</h3>
+    <div class="Rules">
+      <ul>
+        <li>Rock smashes Scissors</li>
+        <li>Scissors decapitates Lizard</li>
+        <li>Lizard poisons Spock</li>
+        <li>Spock vaporizes Rock</li>
+        <li>Rock crushes Lizard</li>
+        <li>Lizard eats Paper</li>
+        <li>Paper disproves Spock</li>
+        <li>Spock breaks Scissors</li>
+        <li>Scissors cuts Paper</li>
+        <li>Paper covers Rock</li>
+      </ul>
+    </div>
+    <h3 id="Scoreboard"></h3>
+    <h2 id="Results"></h2>
+    <p>
+      <strong><u><em>Choose your hero:</em></u></strong>
+    </p>
+    <div class="Heroes">
+      <button accesskey="r"><u>R</u>ock</button>
+      <button accesskey="p"><u>P</u>aper</button>
+      <button accesskey="c">S<u>c</u>issors</button>
+    </div>
+    <div class="Heroes">
+      <button accesskey="l"><u>L</u>izard</button>
+      <button accesskey="s"><u>S</u>pock</button>
+    </div>
+    <script src="rps.js"></script> 
+  </body>
 </html>
